--- a/Makefile.in
+++ b/Makefile.in
@@ -371,56 +371,6 @@ SUBDIRS = . src
 DIST_SUBDIRS = $(subdirs) src conformance benchmarks
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = protobuf.pc protobuf-lite.pc
-php_EXTRA_DIST = \
-  php/src/phpdoc.dist.xml                                    \
-  php/src/Google/Protobuf/Internal/DescriptorPool.php        \
-  php/src/Google/Protobuf/Internal/OneofField.php            \
-  php/src/Google/Protobuf/Internal/MapEntry.php              \
-  php/src/Google/Protobuf/Internal/Type.php                  \
-  php/src/Google/Protobuf/Internal/InputStream.php           \
-  php/src/Google/Protobuf/Internal/OutputStream.php          \
-  php/src/Google/Protobuf/Internal/MessageBuilderContext.php \
-  php/src/Google/Protobuf/Internal/MapField.php              \
-  php/src/Google/Protobuf/Internal/RepeatedField.php         \
-  php/src/Google/Protobuf/Internal/Message.php               \
-  php/src/Google/Protobuf/Internal/GPBWire.php               \
-  php/src/Google/Protobuf/Internal/GPBType.php               \
-  php/src/Google/Protobuf/Internal/GPBLabel.php              \
-  php/src/Google/Protobuf/Internal/EnumBuilderContext.php    \
-  php/src/Google/Protobuf/Internal/GPBUtil.php               \
-  php/src/Google/Protobuf/descriptor_internal.pb.php         \
-  php/src/Google/Protobuf/descriptor.php                     \
-  php/tests/encode_decode_test.php                           \
-  php/tests/test.sh                                          \
-  php/tests/generated_class_test.php                         \
-  php/tests/array_test.php                                   \
-  php/tests/php_implementation_test.php                      \
-  php/tests/test_include.proto                               \
-  php/tests/test_include.pb.php                              \
-  php/tests/map_field_test.php                               \
-  php/tests/test_base.php                                    \
-  php/tests/test_util.php                                    \
-  php/tests/test.proto                                       \
-  php/tests/test.pb.php                                      \
-  php/tests/memory_leak_test.php                             \
-  php/README.md                                              \
-  php/ext/google/protobuf/utf8.h                             \
-  php/ext/google/protobuf/message.c                          \
-  php/ext/google/protobuf/utf8.c                             \
-  php/ext/google/protobuf/package.xml                        \
-  php/ext/google/protobuf/upb.h                              \
-  php/ext/google/protobuf/array.c                            \
-  php/ext/google/protobuf/encode_decode.c                    \
-  php/ext/google/protobuf/protobuf.h                         \
-  php/ext/google/protobuf/type_check.c                       \
-  php/ext/google/protobuf/def.c                              \
-  php/ext/google/protobuf/storage.c                          \
-  php/ext/google/protobuf/map.c                              \
-  php/ext/google/protobuf/config.m4                          \
-  php/ext/google/protobuf/upb.c                              \
-  php/ext/google/protobuf/protobuf.c                         \
-  phpunit.xml                                                \
-  composer.json
 
 ruby_EXTRA_DIST = \
   ruby/Gemfile                                                               \
@@ -500,7 +450,7 @@ js_EXTRA_DIST = \
   js/testbinary.proto                       \
   js/testempty.proto
 
-all_EXTRA_DIST = $(php_EXTRA_DIST) $(ruby_EXTRA_DIST) $(js_EXTRA_DIST)
+all_EXTRA_DIST = $(ruby_EXTRA_DIST) $(js_EXTRA_DIST)
 EXTRA_DIST = $(@DIST_LANG@_EXTRA_DIST)   \
   autogen.sh                             \
   generate_descriptor_proto.sh           \
